# linux_test_code

640_to_800/: 1280data_to_800.c  640data_to_800.c  exe1280  exe666
STDIN_FILENO/: exetest  select_stdin.c
base64/: base64.c  base64.h
define_test/: define.c  exedefine
deprecate_test/: deprecate_test.c  exetest
g711/: g711.c  g711.h
get_cpu_idle/: exemain  get_cpu_idle.c
getopt_long/: exeget  getopt_long.c
h264_alarm_test/miio_h265/: Makefile.am  configure.ac
h264_alarm_test/miio_h265/src/: curl.c  curl.h  h265_g711_mp4.c  h265_g711_mp4.h  h265_g711_queue.c  h265_g711_queue.h  h265_main.c  h265_main.h  h265_motion_event.h  json.c  json.h  rpc_handle.c  rpc_handle.h  util.c  util.h
h264_queue/: exemain  h264_aac_queue.c  h264_aac_queue.h  mk.sh
heap/: Makefile  defs.h  exerun  heap.c  heap.h  main.c  string_utils.h
heatshrink/: heatshrink  heatshrink.c  heatshrink.od  heatshrink_decoder.od  heatshrink_decoder.os  heatshrink_encoder.od  heatshrink_encoder.os  src_dc.txt  src_encode.txt  test_heatshrink_dynamic  test_heatshrink_dynamic.od  test_heatshrink_dynamic_theft.od  test_heatshrink_static  test_heatshrink_static.os
libcommon_array/: Makefile  TestArray.c  array.c  array.h  array_internal.h  test
macro_concat_test/: macro_concat.c
macro_test/: main.c
makefile_fun/: Makefile
mcu_freertos_queue/: queue.c  queue.h
poll_timer/: Makefile  exetimer  target_exe  timer.c
scan_file/: exescanfile  mk.sh  scanfile.c  scanfile.sh  str_timefile_sort.32bit  timestamp
sed_test/: some_code.c
shell_progress/: shell_pross.sh  tt.sh
socket_http/: exehttp  socket_http.c
socket_poll/: mk.sh  poll_socket.c
(+40 files in other folders)
